--- a/src/pages/Notifications.css
+++ b/src/pages/Notifications.css
@@ -1,5 +1,5 @@
-﻿.page-wrapper {
-  padding-top: 100px;
+.page-wrapper {
+  padding-top: 140px;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
